# pr-review-cli

./: .env.example  .gitignore  AGENTS.md  CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRIORITY_SCORING.md  README.md  SETUP.md  WORKSPACE_WIDE_SEARCH.md  oauth_helper.py  pyproject.toml  refresh_token.py  run.sh  setup-config.sh
.serena/: project.yml
02/7fa3164a3c/: metadata.json
02/7fa3164a3c/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
pr-review-web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
pr-review-web/src/: App.vue
pr-review-web/src/api/: client.ts  prs.ts  websocket.ts
pr-review-web/src/components/: AnalysisProgress.vue  DiffViewer.vue  RiskBadge.vue
pr-review-web/src/stores/: analysis.ts  prs.ts
pr-review-web/src/types/: api.ts
pr-review-web/src/views/: Dashboard.vue  PRDetail.vue
pr_review/: __init__.py  bitbucket_client.py  claude_analyzer.py  config.py  defense_council.py  git_diff_manager.py  main.py  main.py.backup  models.py  priority_scorer.py  prompt_loader.py
pr_review/presenters/: __init__.py  interactive_tui.py  report_generator.py
pr_review/utils/: __init__.py  diff_parser.py  git_operations.py  paths.py
pr_review/web/: __init__.py  __main__.py  server.py
pr_review/web/api/: __init__.py  routes.py  websocket.py
pr_review/web/static/: index.html
prompts/: default.md  performance-review.md  quick-scan.md  security-focused.md
reviewers/: README.md  performance-pursuer.md  quality-custodian.md  security-sentinel.md
tests/: __init__.py
