[tool.poetry]
name = "pr-review-cli"
version = "0.1.0"
description = "AI-powered PR review assistant for Bitbucket with Claude integration"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/pr-review-cli"
keywords = ["bitbucket", "pull-request", "review", "claude", "ai", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
packages = [
    { include = "pr_review" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
textual = "^0.86.0"
typer = "^0.12.0"
click = "^8.0.0,<8.1.0"
python-frontmatter = "^1.0.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
pr-review = "pr_review.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
